# PyDrive

./: .gitignore  pyproject.toml  setup.py
pydrive/: auth.py  drive.py  files.py  settings.py
pydrive/test/: test_apiattr.py  test_drive.py  test_file.py  test_filelist.py  test_oauth.py  test_util.py
