[tool.poetry]
name = "pydrive"
version = "1.3.4"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
google-api-python-client = "^1.12.8"
oauth2client = "^4.0.0"
pyyaml = "^3.0"
uritemplate = "3.0.2"

[tool.poetry.dev-dependencies]
flake8-black = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
